--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -322,6 +322,8 @@ jobs:
           $(cat $spec_file | sed 's/^/    /')
           EndOfMessage
 
+          env | grep -v AWS_SECRET_ACCESS_KEY
+
           echo "Uploading catalog file from:${output_file_path}"
           aws s3 cp ${output_file_path} s3://monta-tech-docs/api/
           echo "Upload complete."
