--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -69,6 +69,10 @@ on:
         type: boolean
         default: true
         description: 'If false, will use ArgoCD Updater instead of pushing to kube-manifests'
+      ocpp-gateway-replicas:
+        required: false
+        type: number
+        default: 10
     secrets:
       GHL_USERNAME:
         required: true
@@ -94,6 +98,9 @@ on:
       ARGOCD_TOKEN:
         required: false # REQUIRED WHEN USING `upload-open-api`!!!
         description: 'ArgoCD token - should be set to ARGOCD_TOKEN_STAGING / ARGOCD_TOKEN_PRODUCTION'
+      INFRA_PORTAL_TOKEN:
+        required: false
+        description: 'Infra Portal token'
       TECHDOCS_AWS_ACCESS_KEY_ID:
         required: false
         description: 'TECHDOCS AWS access key id'
@@ -112,6 +119,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       argocd-token: ${{ secrets.ARGOCD_TOKEN }}
+      infra-portal-token: ${{ secrets.INFRA_PORTAL_TOKEN }}
     timeout-minutes: 5
     outputs:
       slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
@@ -120,6 +128,7 @@ jobs:
       service-namespace: ${{ steps.get-manifest-info.outputs.namespace }}
       service-name: ${{ steps.get-manifest-info.outputs.service-name }}
       argocd-server: ${{ steps.set-argocd-server.outputs.argocd-hostname }}
+      infra-portal-server: ${{ steps.set-infra-portal-server.outputs.infra-portal-hostname }}
     steps:
       - name: Publish progress message to slack
         uses: monta-app/slack-notifier-cli-action@main
@@ -161,6 +170,17 @@ jobs:
             ARGOCD_HOSTNAME="argocd.monta.app"
           fi
           echo "argocd-hostname=$ARGOCD_HOSTNAME" >> "$GITHUB_OUTPUT"
+      - id: set-infra-portal-server
+        if: ${{ env.infra-portal-token != '' }}
+        env:
+          STAGE: ${{ inputs.stage }}
+        run: |
+          if [[ $STAGE =~ dev|staging ]]; then
+            INFRA_PORTAL_HOSTNAME="infra-portal.staging.monta.app"
+          else
+            INFRA_PORTAL_HOSTNAME="infra-portal.monta.app"
+          fi
+          echo "infra-portal-hostname=$INFRA_PORTAL_HOSTNAME" >> "$GITHUB_OUTPUT"
       - name: Get manifest info
         id: get-manifest-info
         if: ${{ inputs.upload-open-api }}
@@ -729,3 +749,17 @@ jobs:
           slack-app-token: ${{ secrets.SLACK_APP_TOKEN }}
           slack-channel-id: ${{ inputs.slack-channel-id }}
           slack-message-id: ${{ needs.init.outputs.slack-message-id }}
+
+  deploy_ocpp_gateway:
+    if: ${{ inputs.service-identifier == 'ocpp-gateway' || inputs.service-identifier == 'ocpp-v201-gateway' }}
+    name: Deploy OCPP Gateway
+    needs:
+    - init
+    - push-manifest-list
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - name: send POST to Infra Portal
+        # this still has some static values just to get the ball rolling, will be changed later
+        run: |
+          curl -X POST -H "Authorization: Bearer ${{ secrets.INFRA_PORTAL_TOKEN }}" -H "Content-Type: application/json" -d '{"commitHash": "'"${GITHUB_SHA}"'", "buildNumber": "'"${{ github.run_number }}"'", "awsAccountId": "'"${{ secrets.AWS_ACCOUNT_ID }}"'", "replicas": ${{ inputs.ocpp-gateway-replicas }}}' https://${{ needs.init.outputs.infra-portal-server }}/${{ needs.init.outputs.service-cluster }}/${{ needs.init.outputs.service-namespace }}/create-gateway-release
