--- a/.github/workflows/it-test.yaml
+++ b/.github/workflows/it-test.yaml
@@ -30,7 +30,7 @@ on:
       php-branch:
         required: false
         type: string
-        default: "staging"
+        default: "main"
         description: 'gradle module to be built'
       java-distribution:
         required: false
