fix(it-tests): Removing fresh command

--- a/.github/workflows/it-test.yaml
+++ b/.github/workflows/it-test.yaml
@@ -61,7 +61,7 @@ jobs:
           aws-account-id: ${{ secrets.STAGING_AWS_ACCOUNT_ID }}
       - name: Run PHP migrations
         run: |
-          docker compose exec -T app php artisan migrate:fresh --seed
+          docker compose exec -T app php artisan migrate --seed
         shell: bash
 
       #######################################################
