--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -393,7 +393,7 @@ jobs:
           backstage_system=Platform
           if [ -e ./catalog-info.yaml ]; then
             # Extract the 'owner' and 'system' values, removing anything after a '#'
-            OWNER=$(grep '^\s*owner:' ./catalog-info.yaml | sed 's/.*owner: \([^#]*\).*/\1/' | xargs)
+            OWNER=$(grep '^\s*owner:' ./catalog-info.yaml | sed 's/.*owner: ?\([^#]*\).*/\1/' | xargs)
             SYSTEM=$(grep '^\s*system:' ./catalog-info.yaml | sed 's/.*system: \([^#]*\).*/\1/' | xargs)
           fi
 
