--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -387,6 +387,16 @@ jobs:
               echo "No .yml file found in ${TARGET_DIR}."
               exit 1
           fi
+
+          # Read team and division from catalog-info.yaml
+          backstage_owner=SRE
+          backstage_system=Platform
+          if [ -e ./catalog-info.yaml ]; then
+            # Extract the 'owner' and 'system' values, removing anything after a '#'
+            OWNER=$(grep '^\s*owner:' ./catalog-info.yaml | sed 's/.*owner: ?\([^#]*\).*/\1/' | xargs)
+            SYSTEM=$(grep '^\s*system:' ./catalog-info.yaml | sed 's/.*system: ?\([^#]*\).*/\1/' | xargs)
+          fi
+
           # Print the yml file
           echo "Building catalog file from: ${YML_FILE}"
           spec_file=${YML_FILE}
@@ -404,8 +414,8 @@ jobs:
           spec:
             type: openapi
             lifecycle: production
-            owner: sre
-            system: Platform
+            owner: ${backstage_owner}
+            system: ${backstage_system}
             definition: |
           $(cat $spec_file | sed 's/^/    /')
           EndOfMessage
