--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -78,6 +78,10 @@ on:
         required: false
         type: number
         default: 10
+      run-tests:
+        required: false
+        type: boolean
+        default: true
     secrets:
       GHL_USERNAME:
         required: true
@@ -247,6 +251,7 @@ jobs:
           slack-message-id: ${{ steps.publish-slack.outputs.slack-message-id }}
 
   test:
+    if: ${{ inputs.run-tests }}
     name: Test
     needs: init
     runs-on: ${{ matrix.runner-type }}
