--- a/.github/workflows/pull-request-kover.yaml
+++ b/.github/workflows/pull-request-kover.yaml
@@ -29,6 +29,11 @@ on:
         type: boolean
         default: false
         description: "Upload report to SonarCloud (SONAR_TOKEN must be set)"
+      kover-report-path:
+        required: false
+        type: string
+        description: "Path to the Kover report XML file for code coverage"
+        default: '${{ github.workspace }}/build/reports/kover/report.xml'
     secrets:
       GHL_USERNAME:
         required: true
@@ -111,7 +116,7 @@ jobs:
         uses: mi-kas/kover-report@v1
         with:
           title: Code Coverage ${{ inputs.gradle-module }}
-          path: ${{ github.workspace }}/build/reports/kover/report.xml
+          path: ${{ inputs.kover-report-path }}
           token: ${{ secrets.GITHUB_TOKEN }}
           min-coverage-overall: 70
           min-coverage-changed-files: 70
